Commit for safekeeping

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -1,4 +1,6 @@
 /* Write your global styles here, in PostCSS syntax */
+
+@tailwind base;
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -1934,3 +1936,5 @@ pre {
 		width: 30%;
 	}
 }
+@tailwind components;
+@tailwind utilities
