--- a/src/app.pcss
+++ b/src/app.pcss
@@ -12,8 +12,11 @@
 html,
 body {
 	@apply h-full overflow-hidden;
+	bg-color: #82ab19;
 }
-
+.menubar {
+	text-color: red;
+}
 :root [data-theme='skeleton'] {
 	--theme-font-family-base: 'DMSerif', sans-serif;
 	--theme-font-family-heading: 'DMSerif', sans-serif;
